--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sendstr-web",
+  "name": "x",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
@@ -55,5 +55,5 @@
   "bugs": {
     "url": "https://github.com/vilm3r/sendstr-web/issues"
   },
-  "homepage": "https://sendstr.com"
+  "homepage": "https://x.luvnft.com"
 }
